# nu_plugin_schema

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
examples/: sql.nu
src/: lib.rs  main.rs  normalize.rs
src/schema/: _struct.rs  array.rs  map.rs  mod.rs  tuple.rs  value.rs
