[package]
authors = ["Shirotha"]
name = "nu_plugin_schema"
repository = "https://github.com/Shirotha/nu_plugin_schema"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
lto = "fat"
debug = false
panic = "abort"
strip = "debuginfo"

[profile.release.package."*"]
opt-level = 3


[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256
lto = false
debug = 1

[profile.dev.package."*"]
opt-level = 3


[profile.bench]
incremental = true
codegen-units = 256


[profile.debugger]
inherits = "dev"
debug = 2


[dependencies]
nu-plugin = "0.95.0"
nu-protocol = "0.95.0"
serde = "1.0.203"
thiserror = "1.0.61"
typetag = "0.2.16"

[dev-dependencies]
nu-plugin-test-support = "0.95.0"
